--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ protobuf==4.21.5
 six==1.16.0
 zope.event==4.5.0
 zope.interface==5.4.0
-Python==3.9.13
-Flask==2.1.2
-Werkzeug==2.1.2
+python==3.9.13
+plask==2.1.2
+werkzeug==2.1.2
